lib/src/solver/ffi/bclibc_bindings.g.dart

// AUTO-GENERATED – do not edit.
// Run: dart run ffigen --config ffigen.yaml
//
// ignore_for_file: type=lint
// ignore_for_file: return_of_invalid_type
// ignore_for_file: unnecessary_non_null_assertion
// ignore_for_file: unused_element

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
import 'dart:ffi' as ffi;

/// Auto-generated Dart FFI bindings for the bclibc ballistics engine C API.
class BcLibCBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  BcLibCBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  BcLibCBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// Find the apex (highest point) of the trajectory.
  /// @return BCFFI_OK on success, error code otherwise (fills *err).
  int bcffi_find_apex(
    ffi.Pointer<BCShotProps> props,
    ffi.Pointer<BCTrajectoryData> out,
    ffi.Pointer<BCFFIError> err,
  ) {
    return _bcffi_find_apex(props, out, err);
  }

  late final _bcffi_find_apexPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<BCShotProps>,
            ffi.Pointer<BCTrajectoryData>,
            ffi.Pointer<BCFFIError>,
          )
        >
      >('bcffi_find_apex');
  late final _bcffi_find_apex = _bcffi_find_apexPtr
      .asFunction<
        int Function(
          ffi.Pointer<BCShotProps>,
          ffi.Pointer<BCTrajectoryData>,
          ffi.Pointer<BCFFIError>,
        )
      >();

  /// Find the maximum range and corresponding angle.
  /// @param low_angle_deg   Lower search bound (degrees).
  /// @param high_angle_deg  Upper search bound (degrees).
  int bcffi_find_max_range(
    ffi.Pointer<BCShotProps> props,
    double low_angle_deg,
    double high_angle_deg,
    ffi.Pointer<BCMaxRangeResult> out,
    ffi.Pointer<BCFFIError> err,
  ) {
    return _bcffi_find_max_range(
      props,
      low_angle_deg,
      high_angle_deg,
      out,
      err,
    );
  }

  late final _bcffi_find_max_rangePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<BCShotProps>,
            ffi.Double,
            ffi.Double,
            ffi.Pointer<BCMaxRangeResult>,
            ffi.Pointer<BCFFIError>,
          )
        >
      >('bcffi_find_max_range');
  late final _bcffi_find_max_range = _bcffi_find_max_rangePtr
      .asFunction<
        int Function(
          ffi.Pointer<BCShotProps>,
          double,
          double,
          ffi.Pointer<BCMaxRangeResult>,
          ffi.Pointer<BCFFIError>,
        )
      >();

  /// Find the barrel elevation angle to zero at the given distance.
  /// @param distance_ft     Slant distance to target (ft).
  /// @param out_angle_rad   Output: barrel elevation (radians).
  int bcffi_find_zero_angle(
    ffi.Pointer<BCShotProps> props,
    double distance_ft,
    ffi.Pointer<ffi.Double> out_angle_rad,
    ffi.Pointer<BCFFIError> err,
  ) {
    return _bcffi_find_zero_angle(props, distance_ft, out_angle_rad, err);
  }

  late final _bcffi_find_zero_anglePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<BCShotProps>,
            ffi.Double,
            ffi.Pointer<ffi.Double>,
            ffi.Pointer<BCFFIError>,
          )
        >
      >('bcffi_find_zero_angle');
  late final _bcffi_find_zero_angle = _bcffi_find_zero_anglePtr
      .asFunction<
        int Function(
          ffi.Pointer<BCShotProps>,
          double,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<BCFFIError>,
        )
      >();

  /// Integrate trajectory and return filtered records.
  ///
  /// On success *out_records points to a heap-allocated BCTrajectoryData array
  /// of length *out_count.  Call bcffi_free_trajectory() to release it.
  int bcffi_integrate(
    ffi.Pointer<BCShotProps> props,
    ffi.Pointer<BCTrajectoryRequest> request,
    ffi.Pointer<ffi.Pointer<BCTrajectoryData>> out_records,
    ffi.Pointer<ffi.Int32> out_count,
    ffi.Pointer<ffi.Int32> out_reason,
    ffi.Pointer<BCFFIError> err,
  ) {
    return _bcffi_integrate(
      props,
      request,
      out_records,
      out_count,
      out_reason,
      err,
    );
  }

  late final _bcffi_integratePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<BCShotProps>,
            ffi.Pointer<BCTrajectoryRequest>,
            ffi.Pointer<ffi.Pointer<BCTrajectoryData>>,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<BCFFIError>,
          )
        >
      >('bcffi_integrate');
  late final _bcffi_integrate = _bcffi_integratePtr
      .asFunction<
        int Function(
          ffi.Pointer<BCShotProps>,
          ffi.Pointer<BCTrajectoryRequest>,
          ffi.Pointer<ffi.Pointer<BCTrajectoryData>>,
          ffi.Pointer<ffi.Int32>,
          ffi.Pointer<ffi.Int32>,
          ffi.Pointer<BCFFIError>,
        )
      >();

  /// Free a trajectory array allocated by bcffi_integrate().
  void bcffi_free_trajectory(ffi.Pointer<BCTrajectoryData> records) {
    return _bcffi_free_trajectory(records);
  }

  late final _bcffi_free_trajectoryPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<BCTrajectoryData>)>
      >('bcffi_free_trajectory');
  late final _bcffi_free_trajectory = _bcffi_free_trajectoryPtr
      .asFunction<void Function(ffi.Pointer<BCTrajectoryData>)>();

  /// Integrate and interpolate the single point where a key field reaches
  /// the target value.
  /// @param key          BCBaseTrajInterpKey
  /// @param target_value Value the key field must reach.
  int bcffi_integrate_at(
    ffi.Pointer<BCShotProps> props,
    int key,
    double target_value,
    ffi.Pointer<BCInterception> out,
    ffi.Pointer<BCFFIError> err,
  ) {
    return _bcffi_integrate_at(props, key, target_value, out, err);
  }

  late final _bcffi_integrate_atPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<BCShotProps>,
            ffi.Int32,
            ffi.Double,
            ffi.Pointer<BCInterception>,
            ffi.Pointer<BCFFIError>,
          )
        >
      >('bcffi_integrate_at');
  late final _bcffi_integrate_at = _bcffi_integrate_atPtr
      .asFunction<
        int Function(
          ffi.Pointer<BCShotProps>,
          int,
          double,
          ffi.Pointer<BCInterception>,
          ffi.Pointer<BCFFIError>,
        )
      >();

  /// Angular correction (radians) to hit target at distance with given offset.
  double bcffi_get_correction(double distance_ft, double offset_ft) {
    return _bcffi_get_correction(distance_ft, offset_ft);
  }

  late final _bcffi_get_correctionPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Double, ffi.Double)>>(
        'bcffi_get_correction',
      );
  late final _bcffi_get_correction = _bcffi_get_correctionPtr
      .asFunction<double Function(double, double)>();

  /// Kinetic energy (ft-lb) from bullet weight (grains) and velocity (fps).
  double bcffi_calculate_energy(
    double bullet_weight_grain,
    double velocity_fps,
  ) {
    return _bcffi_calculate_energy(bullet_weight_grain, velocity_fps);
  }

  late final _bcffi_calculate_energyPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Double, ffi.Double)>>(
        'bcffi_calculate_energy',
      );
  late final _bcffi_calculate_energy = _bcffi_calculate_energyPtr
      .asFunction<double Function(double, double)>();

  /// Optimal Game Weight from bullet weight (grains) and velocity (fps).
  double bcffi_calculate_ogw(double bullet_weight_grain, double velocity_fps) {
    return _bcffi_calculate_ogw(bullet_weight_grain, velocity_fps);
  }

  late final _bcffi_calculate_ogwPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Double, ffi.Double)>>(
        'bcffi_calculate_ogw',
      );
  late final _bcffi_calculate_ogw = _bcffi_calculate_ogwPtr
      .asFunction<double Function(double, double)>();
}

abstract class BCFFIStatus {
  static const int BCFFI_OK = 0;
  static const int BCFFI_ERR_SOLVER_RUNTIME = 1;
  static const int BCFFI_ERR_OUT_OF_RANGE = 2;
  static const int BCFFI_ERR_ZERO_FINDING = 3;
  static const int BCFFI_ERR_INTERCEPTION = 4;
  static const int BCFFI_ERR_GENERIC = 5;
}

/// Error output struct – filled by every function on failure.
final class BCFFIError extends ffi.Struct {
  /// < BCFFIStatus
  @ffi.Int32()
  external int code;

  /// < Null-terminated error message
  @ffi.Array.multi([512])
  external ffi.Array<ffi.Char> message;

  /// < OutOfRange: requested_distance_ft / ZeroFinding: zero_finding_error
  @ffi.Double()
  external double f64_0;

  /// < OutOfRange: max_range_ft          / ZeroFinding: last_barrel_elevation_rad
  @ffi.Double()
  external double f64_1;

  /// < OutOfRange: look_angle_rad
  @ffi.Double()
  external double f64_2;

  /// < ZeroFinding: iterations_count
  @ffi.Int32()
  external int i32_0;
}

abstract class BCTrajFlag {
  static const int BC_TRAJ_FLAG_NONE = 0;
  static const int BC_TRAJ_FLAG_ZERO_UP = 1;
  static const int BC_TRAJ_FLAG_ZERO_DOWN = 2;
  static const int BC_TRAJ_FLAG_ZERO = 3;
  static const int BC_TRAJ_FLAG_MACH = 4;
  static const int BC_TRAJ_FLAG_RANGE = 8;
  static const int BC_TRAJ_FLAG_APEX = 16;
  static const int BC_TRAJ_FLAG_ALL = 31;
  static const int BC_TRAJ_FLAG_MRT = 32;
}

abstract class BCTerminationReason {
  static const int BC_TERM_NO_TERMINATE = 0;
  static const int BC_TERM_TARGET_RANGE_REACHED = 1;
  static const int BC_TERM_MINIMUM_VELOCITY_REACHED = 2;
  static const int BC_TERM_MAXIMUM_DROP_REACHED = 3;
  static const int BC_TERM_MINIMUM_ALTITUDE_REACHED = 4;
  static const int BC_TERM_HANDLER_REQUESTED_STOP = 5;
}

/// Interpolation key for BCLIBC_BaseTrajData fields.
abstract class BCBaseTrajInterpKey {
  static const int BC_INTERP_KEY_TIME = 0;
  static const int BC_INTERP_KEY_MACH = 1;
  static const int BC_INTERP_KEY_POS_X = 2;
  static const int BC_INTERP_KEY_POS_Y = 3;
  static const int BC_INTERP_KEY_POS_Z = 4;
  static const int BC_INTERP_KEY_VEL_X = 5;
  static const int BC_INTERP_KEY_VEL_Y = 6;
  static const int BC_INTERP_KEY_VEL_Z = 7;
}

abstract class BCIntegrationMethod {
  static const int BC_INTEGRATION_RK4 = 0;
  static const int BC_INTEGRATION_EULER = 1;
}

final class BCConfig extends ffi.Struct {
  @ffi.Double()
  external double cStepMultiplier;

  @ffi.Double()
  external double cZeroFindingAccuracy;

  @ffi.Double()
  external double cMinimumVelocity;

  @ffi.Double()
  external double cMaximumDrop;

  @ffi.Int32()
  external int cMaxIterations;

  @ffi.Double()
  external double cGravityConstant;

  @ffi.Double()
  external double cMinimumAltitude;
}

final class BCAtmosphere extends ffi.Struct {
  /// < Temperature at base altitude (°F)
  @ffi.Double()
  external double t0;

  /// < Base altitude (ft)
  @ffi.Double()
  external double a0;

  /// < Pressure at base altitude (hPa)
  @ffi.Double()
  external double p0;

  /// < Speed of sound (fps)
  @ffi.Double()
  external double mach;

  /// < Air density / standard density
  @ffi.Double()
  external double density_ratio;

  /// < Lowest allowed temperature (°C)
  @ffi.Double()
  external double cLowestTempC;
}

final class BCCoriolis extends ffi.Struct {
  @ffi.Double()
  external double sin_lat;

  @ffi.Double()
  external double cos_lat;

  @ffi.Double()
  external double sin_az;

  @ffi.Double()
  external double cos_az;

  @ffi.Double()
  external double range_east;

  @ffi.Double()
  external double range_north;

  @ffi.Double()
  external double cross_east;

  @ffi.Double()
  external double cross_north;

  /// < Non-zero = flat-fire approximation
  @ffi.Int32()
  external int flat_fire_only;

  @ffi.Double()
  external double muzzle_velocity_fps;
}

final class BCWind extends ffi.Struct {
  @ffi.Double()
  external double velocity_fps;

  @ffi.Double()
  external double direction_from_rad;

  @ffi.Double()
  external double until_distance_ft;

  /// < Sentinel for last segment (use BCLIBC_cMaxWindDistanceFeet)
  @ffi.Double()
  external double max_distance_ft;
}

final class BCDragPoint extends ffi.Struct {
  @ffi.Double()
  external double Mach;

  @ffi.Double()
  external double CD;
}

/// Flat shot properties passed to every engine function.
final class BCShotProps extends ffi.Struct {
  @ffi.Double()
  external double bc;

  @ffi.Double()
  external double look_angle_rad;

  @ffi.Double()
  external double twist_inch;

  @ffi.Double()
  external double length_inch;

  @ffi.Double()
  external double diameter_inch;

  @ffi.Double()
  external double weight_grain;

  @ffi.Double()
  external double barrel_elevation_rad;

  @ffi.Double()
  external double barrel_azimuth_rad;

  @ffi.Double()
  external double sight_height_ft;

  @ffi.Double()
  external double cant_angle_rad;

  @ffi.Double()
  external double alt0_ft;

  @ffi.Double()
  external double muzzle_velocity_fps;

  external BCAtmosphere atmo;

  external BCCoriolis coriolis;

  external BCConfig config;

  @ffi.Int32()
  external int method;

  /// Drag table – pointer must remain valid for the duration of the call.
  external ffi.Pointer<BCDragPoint> drag_table;

  @ffi.Int32()
  external int drag_table_count;

  /// Wind list – pointer must remain valid for the duration of the call.
  external ffi.Pointer<BCWind> winds;

  @ffi.Int32()
  external int wind_count;
}

final class BCTrajectoryRequest extends ffi.Struct {
  @ffi.Double()
  external double range_limit_ft;

  @ffi.Double()
  external double range_step_ft;

  @ffi.Double()
  external double time_step;

  /// < BCTrajFlag bitmask
  @ffi.Int32()
  external int filter_flags;
}

final class BCBaseTrajData extends ffi.Struct {
  @ffi.Double()
  external double time;

  /// < Position x (downrange, ft)
  @ffi.Double()
  external double px;

  /// < Position y (height, ft)
  @ffi.Double()
  external double py;

  /// < Position z (windage, ft)
  @ffi.Double()
  external double pz;

  /// < Velocity x (fps)
  @ffi.Double()
  external double vx;

  /// < Velocity y (fps)
  @ffi.Double()
  external double vy;

  /// < Velocity z (fps)
  @ffi.Double()
  external double vz;

  @ffi.Double()
  external double mach;
}

final class BCTrajectoryData extends ffi.Struct {
  @ffi.Double()
  external double time;

  @ffi.Double()
  external double distance_ft;

  @ffi.Double()
  external double velocity_fps;

  @ffi.Double()
  external double mach;

  @ffi.Double()
  external double height_ft;

  @ffi.Double()
  external double slant_height_ft;

  @ffi.Double()
  external double drop_angle_rad;

  @ffi.Double()
  external double windage_ft;

  @ffi.Double()
  external double windage_angle_rad;

  @ffi.Double()
  external double slant_distance_ft;

  @ffi.Double()
  external double angle_rad;

  @ffi.Double()
  external double density_ratio;

  @ffi.Double()
  external double drag;

  @ffi.Double()
  external double energy_ft_lb;

  @ffi.Double()
  external double ogw_lb;

  /// < BCTrajFlag
  @ffi.Int32()
  external int flag;
}

final class BCMaxRangeResult extends ffi.Struct {
  @ffi.Double()
  external double max_range_ft;

  @ffi.Double()
  external double angle_at_max_rad;
}

final class BCInterception extends ffi.Struct {
  external BCBaseTrajData raw_data;

  external BCTrajectoryData full_data;
}
